# twip-mining

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
data/: manifest.jsonl
doc/: club_floyd_transcript_classifier_examples.md
doc/classification/examples/: again.md  ask.md  death.md  decaying_status_effect.md  disambiguation.md  give.md  go.md  inventory.md  listen.md  look_or_examine.md  meta_about.md  meta_help.md  meta_hint.md  meta_quit.md  npc_command.md  open.md  open_close.md  person_interaction.md  put.md  read.md  say.md  search.md  sniff.md  solvable_blocked_action.md  special_blocked_move.md  take.md  turn_based_combat.md  uncle_zarf_pd.md  unlock.md  xyzzy.md
doc/pipeline/: 01_discover_transcripts.md  02_fetch_local.md  03_normalize_data.md  04_pair_commands_to_results.md  05_classify_outcomes.md  06_generate_candidate_cases.md  pipeline.md
src/clubfloyd_mine/: audit.py  classify.py  cli.py  discover.py  extract_pairs.py  fetch.py  make_records.py  manifest.py  models.py  normalize.py  paths.py  segment.py  view.py
tests/: test_audit.py  test_classify.py  test_discover.py  test_extract_pairs.py  test_fetch.py  test_manifest.py  test_models.py  test_normalize.py  test_paths.py  test_segment.py  test_view.py
tests/fixtures/: index_sample.html  nevermore_sample.html
